@@ -79,6 +79,8 @@ Release 0.19.0 - Unreleased
                (Sishen Freecity via Stack)
    HBASE-936   REST Interface: enable get number of rows from scanner interface
                (Sishen Freecity via Stack)
+   HBASE-960   REST interface: more generic column family configure and also
+               get Rows using offset and limit (Sishen Freecity via Stack)
     
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
